--- a/gmod.vcxproj
+++ b/gmod.vcxproj
@@ -73,7 +73,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(ProjectDir)</IncludePath>
     <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -95,6 +95,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -157,14 +158,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="csgo.hpp" />
-    <ClInclude Include="framework.h" />
+    <ClInclude Include="sdk\enums.h" />
+    <ClInclude Include="sdk\math\math.h" />
+    <ClInclude Include="sdk\recv.h" />
+    <ClInclude Include="sdk\netvar.h" />
     <ClInclude Include="hooks.cpp" />
-    <ClInclude Include="Includes.h" />
-    <ClInclude Include="extramath.h" />
-    <ClInclude Include="AntiAim.hpp" />
+    <ClInclude Include="includes.h" />
+    <ClInclude Include="antiaim.hpp" />
     <ClInclude Include="menu.h" />
-    <ClInclude Include="sdk.h" />
-    <ClInclude Include="Toggles.h" />
+    <ClInclude Include="sdk\sdk.h" />
+    <ClInclude Include="toggles.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
