--- a/gmod.vcxproj.filters
+++ b/gmod.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="sdk\patternscanningIDA.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Backtrack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
