--- a/gmod.vcxproj
+++ b/gmod.vcxproj
@@ -73,7 +73,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(ProjectDir)</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(ProjectDir)\</IncludePath>
     <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -159,7 +159,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\OneDrive\Desktop\lodepng-master\lodepng.h" />
     <ClInclude Include="csgo.hpp" />
+    <ClInclude Include="menu\lodepng.h" />
+    <ClInclude Include="menu\resource.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="sdk\enums.h" />
     <ClInclude Include="sdk\math\math.h" />
     <ClInclude Include="sdk\patternscanningIDA.h" />
@@ -168,12 +172,19 @@
     <ClInclude Include="hooks.cpp" />
     <ClInclude Include="includes.h" />
     <ClInclude Include="antiaim.hpp" />
-    <ClInclude Include="menu.h" />
+    <ClInclude Include="menu\menu.h" />
     <ClInclude Include="sdk\sdk.h" />
     <ClInclude Include="toggles.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\OneDrive\Desktop\lodepng-master\lodepng.cpp" />
     <ClCompile Include="dllmain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Riot-Vanguard_V2.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="E:\Random\Sorting hat\1924822548\chinaman.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
