--- a/gmod.vcxproj.filters
+++ b/gmod.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="menu\images\lodepng\lodepng.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Backtrack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
